Fixed overscrolling in character selection and styled scrollbar

--- a/ttrpg/src/app/components/main/startscreen/startscreen.component.sass
+++ b/ttrpg/src/app/components/main/startscreen/startscreen.component.sass
@@ -3,3 +3,6 @@
 	width: 50rem
 	max-width: 50rem
 
+.listElements
+	max-height: calc( 100vh - 16rem )
+	overflow: auto
